add annotations for tag, team contact and team subscription
