# api/handler/tag.go
@@ -19,6 +19,14 @@ func tag(router chi.Router) {
 	})
 }
 
+// @summary Get all tags
+// @id get-all-tags
+// @tags tag
+// @produce json
+// @success 200 {object} dto.TagsData "Tags fetched successfully"
+// @failure 422 {object} api.ErrorRenderExample "Render error"
+// @failure 500 {object} api.ErrorInternalServerExample "Internal server error"
+// @router /tag [get]
 func getAllTags(writer http.ResponseWriter, request *http.Request) {
 	tagData, err := controller.GetAllTags(database)
 	if err != nil {
@@ -32,6 +40,14 @@ func getAllTags(writer http.ResponseWriter, request *http.Request) {
 	}
 }
 
+// @summary Get all tags and their subscriptions
+// @id get-all-tags-and-subscriptions
+// @tags tag
+// @produce json
+// @success 200 {object} dto.TagsStatistics "Successful"
+// @failure 422 {object} api.ErrorRenderExample "Render error"
+// @failure 500 {object} api.ErrorInternalServerExample "Internal server error"
+// @router /tag/stats [get]
 func getAllTagsAndSubscriptions(writer http.ResponseWriter, request *http.Request) {
 	logger := middleware.GetLoggerEntry(request)
 	data, err := controller.GetAllTagsAndSubscriptions(database, logger)
@@ -45,6 +61,16 @@ func getAllTagsAndSubscriptions(writer http.ResponseWriter, request *http.Reques
 	}
 }
 
+// @summary Remove a tag
+// @id remove-tag
+// @tags tag
+// @produce json
+// @param tag path string true "Name of the tag to remove" extensions(x-example=cpu)
+// @success 200 {object} dto.MessageResponse "Tag removed successfully"
+// @failure 400 {object} api.ErrorInvalidRequestExample "Bad request from client"
+// @failure 422 {object} api.ErrorRenderExample "Render error"
+// @failure 500 {object} api.ErrorInternalServerExample "Internal server error"
+// @router /tag/{tag} [delete]
 func removeTag(writer http.ResponseWriter, request *http.Request) {
 	tagName := middleware.GetTag(request)
 	response, err := controller.RemoveTag(database, tagName)
